2012-05-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug3223041.c:
	  Do not handle hc08 as special case.

2012-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/r3ka/Makefile.in:
	  Fix building of r3ka lib.
	* device/lib/s08/Makefile.in:
	  Fix building of s08 lib.
	* support/regression/Makefile.in,
	  support/regression/ports/s08,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/tests/gcc-torture-execute-func-ptr-1.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c,
	  support/regression/tests/gcc-torture-execute-921208-1.c,
	  support/regression/tests/bug3379723.c,
	  support/regression/tests/gcc-torture-execute-930702-1.c,
	  support/regression/tests/float_single.c,
	  support/regression/tests/gcc-torture-execute-20000412-2.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-20030209-1.c,
	  support/regression/tests/gcc-torture-execute-950915-1.c,
	  support/regression/tests/bug1723128.c,
	  support/regression/tests/gcc-torture-execute-20001221-1.c,
	  support/regression/tests/gcc-torture-execute-20030307-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-20001108-1.c,
	  support/regression/tests/cse.c:
	  Regression testing for s08 port.
	* device/include/stdarg.h:
	  Fix variable arguments for s08.
	* device/lib/_mullong.c:
	  Fix long multiplication for s08.

2012-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* configure.in,
	  src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/SDCCmain.c,
	  src/port.h,
	  src/SDCCglue.c,
	  src/hc08/main.c,
	  src/SDCCpeeph.c,
	  src/hc08/hc08.h,
	  device/lib/Makefile.in,
	  device/lib/s08:
	  Dummy (behaves as HC08) S08 port.

2012-05-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdarg.h,
	  device/include/string.h,
	  device/include/setjmp.h,
	  device/lib/Makefile.in,
	  configure.in,
	  src/SDCCopt.c,
	  src/z80/gen.c,